--- a/main/django-app/novnc-proxy-django-master/static/novnc/po/pt_PT.po
+++ b/main/django-app/novnc-proxy-django-master/static/novnc/po/pt_PT.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2021-03-15 22:09-0300\n"
 "Last-Translator: <liddack@outlook.com>\n"
 "Language-Team: Brazilian Portuguese\n"
-"Language: pt_BR\n"
+"Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
